# turtlebot3_description

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  package.xml
.github/: pull_request_template.md
.github/workflows/: create-release.yaml  ros-ci.yaml
docker/: Dockerfile  docker-compose.yaml  start.sh
launch/: turtlebot3_burger.launch.py
rviz/: burger_ros2.rviz
urdf/: turtlebot3_burger.gazebo.xacro
worlds/: tenBySixteenRoom.world
