<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_description</name>
  <version>0.1.0</version>
  <description>Visual Setup For Turtlebot3 in ROS2</description>
  <maintainer email="choatej@gmail.com">Jon Choate</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <build_depend>ament_index_python</build_depend>
  <build_depend>launch</build_depend>
  <build_depend>launch_ros</build_depend>

  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_flake8</test_depend>



  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
